# nm-otool

./: .ft_nm.c.swp  CMakeLists.txt  Makefile  fat.c  ft_archive.c  ft_extract_file.c  ft_nm  ft_nm.c  ft_otool  ft_otool.c  ft_read_mach.c  ft_read_mach_32.c  ft_read_mach_64.c  ft_read_march_32.c  hexdump  mach.c  revirce_fat.c  revirce_mach_32.c  revirce_mach_64.c  tstmain.c
Includes/: fat.h  mach.h  mach_32.h  mach_64.h  nm-otool.h  nm_otool.h
libft/: ft_is_newword.c  ft_lstaddend.c  ft_newword.c  ft_numwords.c  ft_strcmp.c  get_next_line.c  libft.h
test/: a.out  bar.c  foo.c  march-o  march-o.c  tst.c  tstmain.c  tstmain.out
